tests/baselines/reference/parserObjectCreation2.errors.txt
parserObjectCreation2.ts(1,9): error TS2304: Cannot find name 'Foo'.


==== parserObjectCreation2.ts (1 errors) ====
    new new Foo()()
            ~~~
!!! error TS2304: Cannot find name 'Foo'.